--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
     <link href="{{url_for('static', filename='vendor/bootstrap/css/bootstrap.css') }}" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="{{url_for('static', filename='css/style.css') }}" rel="stylesheet">
+    <link href="{{url_for('static', filename='css/twentytwenty.css') }}" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/4.4.5/css/fileinput.min.css" media="all" rel="stylesheet" type="text/css" />
     <!-- Custom styles for this template -->
     <style>
@@ -69,6 +70,8 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
     <script src="{{url_for('static', filename='vendor/jquery/jquery.min.js') }}"></script>
+    <script src="{{url_for('static', filename='vendor/twentytwenty/jquery.event.move.js') }}"></script>
+    <script src="{{url_for('static', filename='vendor/twentytwenty/jquery.twentytwenty.js') }}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/4.4.5/js/plugins/piexif.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/4.4.5/js/plugins/sortable.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/4.4.5/js/plugins/purify.min.js" type="text/javascript"></script>
