--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,9 @@
 <li>
     <a class="nav-link" href="/maskstyle">Maskstyle</a>
 </li>
+<li>
+    <a class="nav-link" href="/about">About</a>
+</li>
 {% endblock topNavbar %}
 
 {% block modal %}
@@ -49,21 +52,21 @@
 		</ol>
 		<div class="carousel-inner" role="listbox">
 			<!-- Slide One - Set the background image for this slide in the line below -->
-			<div class="carousel-item active" style="background-image: url('./static/img/landing/la_muse_lucechapel.png')">
+			<div class="carousel-item active" style="background-image: url('./static/img/landing/la_muse_lucechapel.jpg')">
 				<div class="carousel-caption d-none d-md-block">
 					<h3>Luce Chapel & La Muse</h3>
 					<p>La Muse by Pablo Picasso</p>
 				</div>
 			</div>
 			<!-- Slide Two - Set the background image for this slide in the line below -->
-			<div class="carousel-item" style="background-image: url('./static/img/landing/udnie_lucechapel.png')">
+			<div class="carousel-item" style="background-image: url('./static/img/landing/udnie_lucechapel.jpg')">
 				<div class="carousel-caption d-none d-md-block">
 					<h3>Luce Chapel & Udnie</h3>
 					<p>Udnie by Francis Picabia.</p>
 				</div>
 			</div>
 			<!-- Slide Three - Set the background image for this slide in the line below -->
-			<div class="carousel-item" style="background-image: url('./static/img/landing/wave_crop_lucechapel.png')">
+			<div class="carousel-item" style="background-image: url('./static/img/landing/wave_crop_lucechapel.jpg')">
 				<div class="carousel-caption d-none d-md-block">
 					<h3>Luce Chapel & 神奈川沖浪裏</h3>
 					<p>神奈川沖浪裏 by 葛飾 北斎</p>
@@ -89,7 +92,7 @@
 		<div class="row">
 			<div class="col-md-12 text-center">
 				<h2 class="section-heading text-uppercase">Welcome to Tucana</h2>
-				<h3 class="section-subheading text-muted">Please choose a transfer mode.</h3>
+				<h3 class="section-subheading text-muted">Please choose a transformation mode.</h3>
 			</div>
 		</div>
 		<section>
