--- a/templates/maskStyle.html
+++ b/templates/maskStyle.html
@@ -14,6 +14,9 @@
 <li>
     <a class="nav-link to-top activate" href="#">Maskstyle</a>
 </li>
+<li>
+    <a class="nav-link" href="/about">About</a>
+</li>
 {% endblock topNavbar %}
 
 {% block modal %}
@@ -49,21 +52,21 @@
 		</ol>
 		<div class="carousel-inner" role="listbox">
 			<!-- Slide One - Set the background image for this slide in the line below -->
-			<div class="carousel-item active" style="background-image: url('./static/img/landing/maskstyle_car.png')">
+			<div class="carousel-item active" style="background-image: url('./static/img/landing/maskstyle_car.jpg')">
 				<div class="carousel-caption d-none d-md-block">
 					<h3>Car & 神奈川沖浪裏 & Udnie</h3>
 					<p>Photo searched from internet.</p>
 				</div>
 			</div>
 			<!-- Slide Two - Set the background image for this slide in the line below -->
-			<div class="carousel-item" style="background-image: url('./static/img/landing/maskstyle_mi5.png')">
+			<div class="carousel-item" style="background-image: url('./static/img/landing/maskstyle_mi5.jpg')">
 				<div class="carousel-caption d-none d-md-block">
 					<h3>MI5 & La muse & Udnie</h3>
 					<p>Photo searched from internet.</p>
 				</div>
 			</div>
 			<!-- Slide Three - Set the background image for this slide in the line below -->
-			<div class="carousel-item" style="background-image: url('./static/img/landing/maskstyle_sheep.png')">
+			<div class="carousel-item" style="background-image: url('./static/img/landing/maskstyle_sheep.jpg')">
 				<div class="carousel-caption d-none d-md-block">
 					<h3>Sheeps & 清明上河圖 & Des glaneuses</h3>
 					<p>Photo searched from internet.</p>
@@ -88,7 +91,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 text-center">
-				<h2 class="section-heading text-uppercase">Introduce</h2>
+				<h2 class="section-heading text-uppercase">Mask Style</h2>
 				<h3 class="section-subheading text-muted">Steps to create a special stylish image.</h3>
 			</div>
 		</div>
@@ -211,8 +214,8 @@
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-4">
-							<div id="zhangdaqian" class="img-item">
-								<img class="img-fluid img-thumbnail fore-style-image m-1" src="{{url_for('static', filename='img/styles/zhangdaqian.jpg')}}" alt="Zhangdaqian">
+							<div id="zhangdachien" class="img-item">
+								<img class="img-fluid img-thumbnail fore-style-image m-1" src="{{url_for('static', filename='img/styles/zhangdachien.jpg')}}" alt="Zhangdachien">
 							</div>
 						</div>    
 					</div>
@@ -238,6 +241,67 @@
 						<div class="col-lg-4 col-md-4 col-sm-4">
 							<div id="monalisa" class="img-item">
 								<img class="img-fluid img-thumbnail fore-style-image m-1" src="{{url_for('static', filename='img/styles/monalisa.jpg')}}" alt="Monalisa">
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-4">
+							<div id="picassoself" class="img-item">
+								<img class="img-fluid img-thumbnail fore-style-image m-1" src="{{url_for('static', filename='img/styles/picassoself.jpg')}}" alt="Picassoself">
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-4">
+							<div id="jingdo" class="img-item">
+								<img class="img-fluid img-thumbnail fore-style-image m-1" src="{{url_for('static', filename='img/styles/jingdo.jpg')}}" alt="Jingdo">
+							</div>
+						</div>
+					</div>
+					<div class="row mt-2">
+						<div class="col-lg-4 col-md-4 col-sm-4">
+							<div id="aurora" class="img-item">
+								<img class="img-fluid img-thumbnail fore-style-image m-1" src="{{url_for('static', filename='img/styles/aurora.jpg')}}" alt="Aurora">
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-4">
+							<div id="colorful" class="img-item">
+								<img class="img-fluid img-thumbnail fore-style-image m-1" src="{{url_for('static', filename='img/styles/colorful.jpg')}}" alt="Colorful">
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-4">
+							<div id="crystal" class="img-item">
+								<img class="img-fluid img-thumbnail fore-style-image m-1" src="{{url_for('static', filename='img/styles/crystal.jpg')}}" alt="Crystal">
+							</div>
+						</div>
+					</div>
+					<div class="row mt-2">
+						<div class="col-lg-4 col-md-4 col-sm-4">
+							<div id="fire" class="img-item">
+								<img class="img-fluid img-thumbnail fore-style-image m-1" src="{{url_for('static', filename='img/styles/fire.jpg')}}" alt="Fire">
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-4">
+							<div id="tiger" class="img-item">
+								<img class="img-fluid img-thumbnail fore-style-image m-1" src="{{url_for('static', filename='img/styles/tiger.jpg')}}" alt="Tiger">
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-4">
+							<div id="ybfire" class="img-item">
+								<img class="img-fluid img-thumbnail fore-style-image m-1" src="{{url_for('static', filename='img/styles/ybfire.jpg')}}" alt="Ybfire">
+							</div>
+						</div>
+					</div>
+					<div class="row mt-2">
+						<div class="col-lg-4 col-md-4 col-sm-4">
+							<div id="sky" class="img-item">
+								<img class="img-fluid img-thumbnail fore-style-image m-1" src="{{url_for('static', filename='img/styles/sky.jpg')}}" alt="Sky">
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-4">
+							<div id="water" class="img-item">
+								<img class="img-fluid img-thumbnail fore-style-image m-1" src="{{url_for('static', filename='img/styles/water.jpg')}}" alt="Water">
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-4">
+							<div id="chingmin" class="img-item">
+								<img class="img-fluid img-thumbnail fore-style-image m-1" src="{{url_for('static', filename='img/styles/chingmin.jpg')}}" alt="Chingmin">
 							</div>
 						</div>
 					</div>
@@ -284,8 +348,8 @@
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-4">
-							<div id="zhangdaqian" class="img-item">
-								<img class="img-fluid img-thumbnail back-style-image m-1" src="{{url_for('static', filename='img/styles/zhangdaqian.jpg')}}" alt="Zhangdaqian">
+							<div id="zhangdachien" class="img-item">
+								<img class="img-fluid img-thumbnail back-style-image m-1" src="{{url_for('static', filename='img/styles/zhangdachien.jpg')}}" alt="Zhangdachien">
 							</div>
 						</div>    
 					</div>
@@ -311,6 +375,67 @@
 						<div class="col-lg-4 col-md-4 col-sm-4">
 							<div id="monalisa" class="img-item">
 								<img class="img-fluid img-thumbnail back-style-image m-1" src="{{url_for('static', filename='img/styles/monalisa.jpg')}}" alt="Monalisa">
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-4">
+							<div id="picassoself" class="img-item">
+								<img class="img-fluid img-thumbnail back-style-image m-1" src="{{url_for('static', filename='img/styles/picassoself.jpg')}}" alt="Picassoself">
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-4">
+							<div id="jingdo" class="img-item">
+								<img class="img-fluid img-thumbnail back-style-image m-1" src="{{url_for('static', filename='img/styles/jingdo.jpg')}}" alt="Jingdo">
+							</div>
+						</div>
+					</div>
+					<div class="row mt-2">
+						<div class="col-lg-4 col-md-4 col-sm-4">
+							<div id="aurora" class="img-item">
+								<img class="img-fluid img-thumbnail back-style-image m-1" src="{{url_for('static', filename='img/styles/aurora.jpg')}}" alt="Aurora">
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-4">
+							<div id="colorful" class="img-item">
+								<img class="img-fluid img-thumbnail back-style-image m-1" src="{{url_for('static', filename='img/styles/colorful.jpg')}}" alt="Colorful">
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-4">
+							<div id="crystal" class="img-item">
+								<img class="img-fluid img-thumbnail back-style-image m-1" src="{{url_for('static', filename='img/styles/crystal.jpg')}}" alt="Crystal">
+							</div>
+						</div>
+					</div>
+					<div class="row mt-2">
+						<div class="col-lg-4 col-md-4 col-sm-4">
+							<div id="fire" class="img-item">
+								<img class="img-fluid img-thumbnail back-style-image m-1" src="{{url_for('static', filename='img/styles/fire.jpg')}}" alt="Fire">
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-4">
+							<div id="tiger" class="img-item">
+								<img class="img-fluid img-thumbnail back-style-image m-1" src="{{url_for('static', filename='img/styles/tiger.jpg')}}" alt="Tiger">
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-4">
+							<div id="ybfire" class="img-item">
+								<img class="img-fluid img-thumbnail back-style-image m-1" src="{{url_for('static', filename='img/styles/ybfire.jpg')}}" alt="Ybfire">
+							</div>
+						</div>
+					</div>
+					<div class="row mt-2">
+						<div class="col-lg-4 col-md-4 col-sm-4">
+							<div id="sky" class="img-item">
+								<img class="img-fluid img-thumbnail back-style-image m-1" src="{{url_for('static', filename='img/styles/sky.jpg')}}" alt="Sky">
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-4">
+							<div id="water" class="img-item">
+								<img class="img-fluid img-thumbnail back-style-image m-1" src="{{url_for('static', filename='img/styles/water.jpg')}}" alt="Water">
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-4">
+							<div id="chingmin" class="img-item">
+								<img class="img-fluid img-thumbnail back-style-image m-1" src="{{url_for('static', filename='img/styles/chingmin.jpg')}}" alt="Chingmin">
 							</div>
 						</div>
 					</div>
@@ -412,7 +537,6 @@
 
 	// Submit form data
 	function sendData(formdata) {
-		alert('send data');
 		$.ajax({
 			url: "/maskstyle_upload_image",
 			data: formdata,
