--- a/templates/fastStyle.html
+++ b/templates/fastStyle.html
@@ -184,8 +184,8 @@
 				<div class="container-fluid card-body" style="max-height: 450px;overflow-y: scroll;">
 					<div class="row mt-2">
 						<div class="col-lg-4 col-md-4 col-sm-4">
-							<div id="mirror" class="img-item">
-								<img class="img-fluid img-thumbnail style-image m-1" src="{{url_for('static', filename='img/styles/mirror.jpg')}}" alt="Mirror">
+							<div id="mosaic" class="img-item">
+								<img class="img-fluid img-thumbnail style-image m-1" src="{{url_for('static', filename='img/styles/mosaic.jpg')}}" alt="Mosaic">
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-4">
@@ -312,6 +312,30 @@
 		</section>
 		<HR>
 	</div>
+	<section class="container mt-3 text-center" id="color-adjusting">
+		<div class="text-center mb-3">
+			<h4 class="text-muted">Optional adjustment</h4>
+		</div>
+		<div class="radio">
+			<div class="col-md-4 div-centered"> 
+		  	<label><input type="radio" name="original-color" value="0" id="not-preserve-original" checked>None</label>
+		  </div>
+		</div>
+		<div class="radio">
+			<div class="col-md-4 div-centered"> 
+		  	<label><input type="radio" name="original-color" value="1" id="preserve-color-radio">Preserve original color</label>
+		  </div>
+		</div>
+		<div class="radio">
+			<div class="col-md-4 div-centered"> 
+			  	<label><input type="radio" name="original-color" value="2" id="blend-original-radio">Blend with original color</label>
+			  	<div class="slidecontainer text-center d-none" id="blend-slider-container">
+			  		<input type="range" min="0" max="100" value="50" class="slider" id="blend-ratio">
+			  		<span>Ratio: <span id="blend-value-text">50</span>%</span>
+			  	</div>
+		  	</div>
+		</div>
+	</section>
 	<div class="container mt-3">
 		<div class="d-flex justify-content-center">
 		  <div class="row">
@@ -362,10 +386,22 @@
 		if($("#img-input").fileinput('getFileStack')[0] != undefined && selectedStyleImage != undefined) {
 			var form = new FormData();
 			var files = $("#img-input").fileinput('getFileStack');
+			var colorAdjustingMode = $('input[type=radio][name=original-color]:checked').val();
 
 			form.append("file", files[0]);
-        	// NEED TO CHANGE IN FUTURE
         	form.append("style", selectedStyleImage);
+        	form.append("colorAdustingMode", colorAdjustingMode);
+        	// Contain blend ratio
+        	if(colorAdjustingMode == '2') {
+        		var blendSlider = document.getElementById("blend-ratio");
+        		var sliderValue = blendSlider.value;
+        		if(sliderValue == null || sliderValue == undefined) {
+        			sliderValue = 0
+        		}
+        		form.append("blendRatio", sliderValue);
+        		console.log(sliderValue);
+        	}
+
         	sendData(form);
 			// Show the result section
 			$(".result-section").toggleClass("d-none", false);
@@ -384,23 +420,10 @@
 		}
 	}
 
-	// Read the image user choosed to upload
-	// function readURL(input) {
-	// 	if (input.fileinput('getFileStack')[0]) {
-	// 		var reader = new FileReader();
-	// 		reader.onload = function(e) {
-	// 			$("#img-origin").css("visibility", "visible");
-	// 			$("#img-origin").attr("src", e.target.result);
-	// 			$(window).trigger("resize.twentytwenty");
-	// 		}
-	// 		reader.readAsDataURL(input.fileinput('getFileStack')[0]);
-	// 	}
-	// }
-
 	// Submit form data
 	function sendData(formdata) {
 		$.ajax({
-			url: "/upload_image",
+			url: "/faststyle_upload_image",
 			data: formdata,
 			type: "POST",
 			contentType: false,
@@ -455,7 +478,14 @@
 		}
 	}
 
-	
+	var blendSlider = document.getElementById("blend-ratio");
+	var blendSliderTextValue = document.getElementById("blend-value-text");
+	blendSliderTextValue.innerHTML = blendSlider.value; // Display the default slider value
+
+	// Update the current slider value (each time you drag the slider handle)
+	blendSlider.oninput = function() {
+	  blendSliderTextValue.innerHTML = this.value;
+	}
 
 	$("#img-input").fileinput({
 		uploadUrl: '/dropzone_dummy',
@@ -477,21 +507,7 @@
 	});
 	// Load this part while the DOM is ready
 	$(function() {
-		// // Listen to the upload image button
-		// $("#img-input").change(function() {
-		// 	readURL(this);
-		// });
-		// // Clean the former selected image
-		// $("#img-input").click(function() {
-		// 	$("#img-preview").css("visibility", "hidden");
-		// 	$("#img-input").prop("value", "");
-		// 	$("#img-output").attr("src","");
-		// 	toggleOutputImage(false);
-		// 	$(".result-section").toggleClass("d-none", true);
-		// });
-
 		// Listen to the style image selected event
-
 		$(".style-image").click(function() {
 			$(".style-image").removeClass("item-onclick");
 			$(this).addClass("item-onclick");
@@ -507,6 +523,28 @@
 			}, 1000, 
 			"easeInOutExpo");
 			return false;
+		});
+
+		$(".to-top").click(function() {
+			$('html, body').animate({
+				scrollTop: $("#page-top").offset().top
+			}, 1000, 
+			"easeInOutExpo");
+			return false;
+		});
+
+		$('input[type=radio][name=original-color]').change(function() {
+		    switch(this.value) {
+		      case '1':
+		        $("#blend-slider-container").toggleClass("d-none", true);
+		        break;
+		      case '2':
+		        $("#blend-slider-container").toggleClass("d-none", false);
+		        break;
+		      default:
+		      	$("#blend-slider-container").toggleClass("d-none", true);
+		      	break;
+		    }
 		});
 
 	  	// Display the to top button
