--- a/templates/maskStyle.html
+++ b/templates/maskStyle.html
@@ -187,8 +187,8 @@
 				<div class="container-fluid card-body" style="max-height: 450px;overflow-y: scroll;">
 					<div class="row mt-2">
 						<div class="col-lg-4 col-md-4 col-sm-4">
-							<div id="mirror" class="img-item">
-								<img class="img-fluid img-thumbnail fore-style-image m-1" src="{{url_for('static', filename='img/styles/mirror.jpg')}}" alt="Mirror">
+							<div id="mosaic" class="img-item">
+								<img class="img-fluid img-thumbnail fore-style-image m-1" src="{{url_for('static', filename='img/styles/mosaic.jpg')}}" alt="Mosaic">
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-4">
@@ -321,8 +321,8 @@
 				<div class="container-fluid card-body" style="max-height: 450px;overflow-y: scroll;">
 					<div class="row mt-2">
 						<div class="col-lg-4 col-md-4 col-sm-4">
-							<div id="mirror" class="img-item">
-								<img class="img-fluid img-thumbnail back-style-image m-1" src="{{url_for('static', filename='img/styles/mirror.jpg')}}" alt="Mirror">
+							<div id="mosaic" class="img-item">
+								<img class="img-fluid img-thumbnail back-style-image m-1" src="{{url_for('static', filename='img/styles/mosaic.jpg')}}" alt="Mosaic">
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-4">
@@ -449,6 +449,30 @@
 		</section>
 	</div>
 	<HR>
+	<section class="container mt-3 text-center" id="color-adjusting">
+		<div class="text-center mb-3">
+			<h4 class="text-muted">Optional adjustment</h4>
+		</div>
+		<div class="radio">
+			<div class="col-md-4 div-centered"> 
+		  	<label><input type="radio" name="original-color" value="0" id="not-preserve-original" checked>None</label>
+		  </div>
+		</div>
+		<div class="radio">
+			<div class="col-md-4 div-centered"> 
+		  	<label><input type="radio" name="original-color" value="1" id="preserve-color-radio">Preserve original color</label>
+		  </div>
+		</div>
+		<div class="radio">
+			<div class="col-md-4 div-centered"> 
+			  	<label><input type="radio" name="original-color" value="2" id="blend-original-radio">Blend with original color</label>
+			  	<div class="slidecontainer text-center d-none" id="blend-slider-container">
+			  		<input type="range" min="0" max="100" value="50" class="slider" id="blend-ratio">
+			  		<span>Ratio: <span id="blend-value-text">50</span>%</span>
+			  	</div>
+		  	</div>
+		</div>
+	</section>
 	<div class="container mt-3">
 		<div class="d-flex justify-content-center">
 		  <div class="row">
@@ -500,12 +524,25 @@
 		if($("#img-input").fileinput('getFileStack')[0] != undefined && selectedForeground != undefined && selectedBackground != undefined) {
 			var form = new FormData();
 			var files = $("#img-input").fileinput('getFileStack');
+			var colorAdjustingMode = $('input[type=radio][name=original-color]:checked').val();
 
 			form.append("file", files[0]);
-        	// NEED TO CHANGE IN FUTURE
         	form.append("forestyle", selectedForeground);
         	form.append("backstyle", selectedBackground);
+        	form.append("colorAdustingMode", colorAdjustingMode);
+        	// Contain blend ratio
+        	if(colorAdjustingMode == '2') {
+        		var blendSlider = document.getElementById("blend-ratio");
+        		var sliderValue = blendSlider.value;
+        		if(sliderValue == null || sliderValue == undefined) {
+        			sliderValue = 0
+        		}
+        		form.append("blendRatio", sliderValue);
+        		console.log(sliderValue);
+        	}
+
         	sendData(form);
+
 			// Show the result section
 			$(".result-section").toggleClass("d-none", false);
 			$("#result-state").text("Wait a minute!");
@@ -593,7 +630,14 @@
 
 	}
 
-	
+	var blendSlider = document.getElementById("blend-ratio");
+	var blendSliderTextValue = document.getElementById("blend-value-text");
+	blendSliderTextValue.innerHTML = blendSlider.value; // Display the default slider value
+
+	// Update the current slider value (each time you drag the slider handle)
+	blendSlider.oninput = function() {
+	  blendSliderTextValue.innerHTML = this.value;
+	}
 
 	$("#img-input").fileinput({
 		uploadUrl: '/dropzone_dummy',
@@ -656,6 +700,20 @@
 			return false;
 		});
 
+		$('input[type=radio][name=original-color]').change(function() {
+		    switch(this.value) {
+		      case '1':
+		        $("#blend-slider-container").toggleClass("d-none", true);
+		        break;
+		      case '2':
+		        $("#blend-slider-container").toggleClass("d-none", false);
+		        break;
+		      default:
+		      	$("#blend-slider-container").toggleClass("d-none", true);
+		      	break;
+		    }
+		});
+		
 	  	// Display the to top button
 	  	$(document).scroll(function() {
 	  		var scrollDistance = $(this).scrollTop();
